unpackaged/objects/Park__c.object
<CustomObject>
    <fields>
        <fullName>Animal_Preserve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Animal Preserve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Acre__c</fullName>
        <label>Number of Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Park</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Park Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>